# obsidian-git-sync

./: .gitignore  .gitmodules  Allergeni.md  Basi di Dati.md  Esercizio per Buso.md  Integrità.md  Prova_parziale 2021_01_18 soluzione.md  README.md  Test.md  Trigger.md  Untitled 1.md  Untitled.canvas  Untitled.md  git  key-value.md  push.sh  test.md
.obsidian/: app.json  appearance.json  canvas.json  community-plugins.json  core-plugins-migration.json  graph.json  hotkeys.json  workspace-mobile.json  workspace.json
.obsidian/snippets/: style.css
Blender/blender_manual_v300_en.html/: .buildinfo  .htaccess  404.html  copyright.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
Notes-main/: Fuck Life.md  README.md
Notes-main/.obsidian/: appearance.json  graph.json  hotkeys.json  workspace.json
Notes-main/Algebra/: Esercizi Algebra pre test.md  Testing sync with github.md
Notes-main/Architettura/: ARM_ISTRUCTION_SET.md  Architettura.md  Assembly.md  Input-Output.md  Memoria virtuale.md  Memoria-> Calcolo delle prestazioni.md  Memoria.md  Ottimizzazione del codice MIPS.md
Notes-main/Inglese/: 2023-05-02-Note-10-58.xopp  English to do.md  Inglese.md
Notes-main/Programmazione/: 2023-05-11-Note-09-43.xopp  List container.md  ListDL.md  Progetto PEL.md  Template.md
Notes-main/testing/: 5  5.cpp  5.txt  6_exe  (+3 more)
Secondo Anno/PEL/: CMakeLists.txt
Secondo Anno/PEL/assets/in/: dictionary.json  list.json
Secondo Anno/PEL/src/: json  json.cpp
Secondo Anno/PEL/test/: test.cpp  test_io.cpp
web-service-gin/: README.md  go.mod  go.sum  main.go
(+2419 files in other folders)
